plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    // 스프링 웹
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 스프링 데이터 JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 스프링 시큐리티
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // OAuth 2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Hibernate Spatial: 공간 데이터를 지원하게 해주는 라이브러리
    implementation 'org.hibernate:hibernate-spatial:6.5.2.Final'

    // JTS (Java Topology Suite): 공간 데이터를 처리하기 위한 라이브러리
    implementation 'org.locationtech.jts:jts-core'

    // Gson
    implementation 'com.google.code.gson:gson:2.7'

    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // TEST
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Mockito
    testImplementation "org.mockito:mockito-core:5.11.0"

    // Valid
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    // Spring AI for OpenAI
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'

}


tasks.named('test') {
    useJUnitPlatform()
}
